tests/integration/libuild/errors/import-inexist-module/index.ts
//@ts-ignore
import { answer } from 'fake';
console.log('answer:', { answer });
